# rehearse

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  rehearse.spec
.github/workflows/: release.yml
docker/agent/: Dockerfile  entrypoint.sh
docker/claude/: Dockerfile  entrypoint.sh
docker/claude-code/: Dockerfile  entrypoint.sh
docker/codex/: Dockerfile  entrypoint.sh
docs/: architecture.md  cli.md  commit.md  isolation.md  lifecycle.md  mirroring.md  overview.md  profiles.md  review.md  sessions.md
instructions/: default.md
prompts/: agent.md
scripts/: build-agent-cc-image.sh  build-agent-claude-image.sh  build-agent-codex-image.sh  build-agent-image.sh  docker-helper.sh  docker-runner.sh  git-snapshot.sh  run-agent-cc.sh  run-agent-codex.sh
src/rehearse/: __init__.py  __main__.py  cli.py  commands.py  commit.py  config.py  docker.py  helper.py  instruction.py  lock.py  meta.py  mirror.py  profile.py  resource.py  run.py  session.py  skeleton.py  validate.py  workspace.py
tests/: conftest.py  fake-runner.sh  script_helpers.py  test_agent_scripts.py  test_build_image.py  test_claude_entrypoint.py  test_cli.py  test_codex_entrypoint.py  test_commit.py  test_create.py  test_docker_helper_script.py  test_docker_runner_script.py  test_helper.py  test_instruction.py  test_lifecycle.py  test_meta.py  test_profile.py  test_resource.py  test_run.py  test_run_agent.py  test_session.py  test_session_meta.py  test_skeleton.py  test_validate.py  test_version.py
