[project]
name = "rehearse"
version = "0.1.0"
description = "symlink-staging harness for delegating large-file organization to AI agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
rehearse = "rehearse.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rehearse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require docker to be available",
]
